== 0.15.0

* Enhancements
  * Groups of stickies can now have their due dates shifted by editing a single sticky in the group and selecting either 'incomplete' to shift all other not completed stickies, or 'all' to shift all the stickies in the group
  * Layout of search filters on sticky page cleaned up

* Bug Fix
  * Minor table GUI fix when expanding a sticky

== 0.14.1

* Bug Fix
  * Use update_column instead of update_attribute to avoid emails being sent out during a migration

== 0.14.0

* Enhancements
  * Stickies no longer have status of 'planned', 'ongoing', 'completed', and now are either completed or not completed
    * NOTE: Stickies can have tags added to them on a per project basis if more fine-grained labeling is required
  * Sticky edit page now contains:
    * Group description if the sticky is part of a group
    * Comments that may have been added to sticky
  * Stickies on the sticky list page:
    * Can now be filtered by:
      * Project
      * Assigned To
      * Due Date
      * Status
    * Display the total count of filtered stickies
    * Contain a link to the group if grouped with other stickies
  * Template show page has been improved
    * Items listed in a template are now sorted by their offset from the initial due date
    * Items are now displayed more succinctly
  * Using Rails 3.2.0.rc2 and Contour 0.8.1
  * Calendar updated have consistent look across browsers and operating systems
  * Templates can now have default sticky tags assigned to each item
  * Projects emails can now be fine-tuned to receive only certain types of updates on a per-project basis

* Refactoring
  * qTip2 is now provided by Contour 0.8.1

== 0.13.0

* Enhancements
  * Calendar Improvements
    * Double clicking on calendar allows creation of a sticky or a sticky group
    * Today's Date and Mouse Hover colors have been lightened
  * Sticky Groups
    * Deleting a grouped sticky now prompts the user to delete:
      * a single sticky
      * all following