@@ -3,10 +3,7 @@
 one:
   user: valid
   project: one
-  sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: StickyOne
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -16,10 +13,7 @@ one:
 grouped:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: StickyGrouped
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -31,10 +25,7 @@ grouped:
 assigned_to_user:
   user: valid
   project: one
-  sticky: one
-  position: 1
   completed: false
-  sticky_type: MyString
   description: MyText
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -90,10 +81,7 @@ viewable_by_valid:
 grouped_one:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: Task A
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -105,10 +93,7 @@ grouped_one:
 grouped_two:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: true
-  # sticky_type: MyString
   description: Task B
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -120,10 +105,7 @@ grouped_two:
 grouped_three:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: Task C
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -135,10 +117,7 @@ grouped_three:
 grouped_four:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: Task D
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -150,10 +129,7 @@ grouped_four:
 grouped_five:
   user: valid
   project: one
-  # sticky: one
-  position: 1
   completed: false
-  # sticky_type: MyString
   description: Task E
   start_date: 2011-02-24
   end_date: 2011-02-24
@@ -165,7 +141,6 @@ grouped_five:
 grouped_six:
   user: valid
   project: one
-  position: 1
   completed: false
   description: Task F - No Due Date
   start_date: 2011-02-24
