@@ -7,6 +7,9 @@
 * Bug Fix
   * Minor table GUI fix when expanding a sticky
 
+* Refactoring
+  * Removed unused sticky attributes sticky type, sticky position, and sticky parent
+
 == 0.14.1
 
 * Bug Fix
